@@ -11,6 +11,7 @@
 * Update - Refactor the `wcs_is_subscription` helper function to support HPOS.
 * Update - Refactor our Related Orders data store classes (WCS_Related_Order_Store_Cached_CPT and WCS_Related_Order_Store_CPT) to use CRUD methods to support subscriptions and orders stored in HPOS.
 * Update - Display related orders table when viewing the new "Edit Order" page (HPOS enabled stores).
+* Fix - On HPOS stores, make sure the links in the related-orders table redirect to the new Edit Order URL.
 * Dev - Removed the deprecated "wcs_subscriptions_for_{$relation_type}_order" dynamic hook used to filter the list of related subscriptions for the given relation type. The following hooks have been removed with no alternative:
         wcs_subscriptions_for_renewal_order
         wcs_subscriptions_for_switch_order
